--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <body>
     <h1>Deepmirror virtual scroll table</h1>
     <div id="table-container"></div>
-    <script src="./app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
